feat: Implement manual presale flow and add liquidity scripts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,6 +108,9 @@
                         <input type="number" id="buy-eth-amount" placeholder="輸入 ETH 數量">
                         <span class="unit-tag">ETH</span>
                     </div>
+                    <button id="buy-tokens-btn" class="btn-elite btn-primary" style="width: 100%; margin-top: 15px;">
+                        <span data-i18n="presale_btn">立即購買</span>
+                    </button>
                     <p class="service-footer-hint" data-i18n="presale_hint">資金將全數用於開啟 Aerodrome 流動性池。</p>
                 </div>
             </div>
