feat: complete developer hub, branding updates, and deployment config

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="/aegis_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aegis (AEG) | 數位權益資產看板 V1.1.0</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono&display=swap"
