--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,12 @@
     <link rel="icon" type="image/png" href="/aegis_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aegis (AEG) | 數位權益資產看板 V1.1.0</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Outfit:wght@400;700;900&family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Ma+Shan+Zheng&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="Aegis Protocol (AEG) | Seed Round Live">
